<resources>
    <string name="app_name">CovidTracker_20</string>
    <string name="country_name">Country Name</string>
    <string name="track_countries">Track Countries</string>
    <string name="zero">0</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_cases">Today Cases</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="recovered">Recovered</string>
    <string name="cases">Cases</string>
    <string name="global_stats">Global stats</string>
    <string name="deaths">Deaths</string>
    <string name="total_cases">Total Cases</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="global_graphs">GLOBAL GRAPHS</string>
    <string name="track_india">TRACK INDIA</string>
</resources>