<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/country"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvcountry"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/cases"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvCases"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_cases"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvTodayCases"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/deaths"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvdeaths"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_deaths"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvTodayDeaths"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/recovered"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvRecovered"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/active"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvActive"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/critical"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/tvCritical"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>